[gd_scene format=3 uid="uid://b36tp7mq6kfa2"]

[ext_resource type="Script" uid="uid://cu61r85mam23h" path="res://UI/options_menu/VolumeController.gd" id="1_xfd8j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fqxaa"]
bg_color = Color(0.14406255, 0.14406255, 0.14406249, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="OptionsMenu" type="Control" unique_id=2126775385]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4

[node name="VolumeController" type="Node" parent="." unique_id=1223459056 node_paths=PackedStringArray("music_slider", "sfx_slider")]
script = ExtResource("1_xfd8j")
music_slider = NodePath("../Panel/HBoxContainer/VBoxContainer/MusicSlider")
sfx_slider = NodePath("../Panel/HBoxContainer/VBoxContainer/SfxSlider")
metadata/_custom_type_script = "uid://cu61r85mam23h"

[node name="Panel" type="Panel" parent="." unique_id=1837789469]
custom_minimum_size = Vector2(800, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fqxaa")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel" unique_id=1021750122]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control2" type="Control" parent="Panel/HBoxContainer" unique_id=1161886186]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer" unique_id=484490465]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="MusicVolumeLabel" type="Label" parent="Panel/HBoxContainer/VBoxContainer" unique_id=1957121645]
layout_mode = 2
size_flags_horizontal = 4
text = "MÃºsica"

[node name="MusicSlider" type="HSlider" parent="Panel/HBoxContainer/VBoxContainer" unique_id=911769255]
layout_mode = 2
size_flags_vertical = 3
min_value = -80.0
max_value = 0.0
value = -15.0

[node name="SfxVolumeLabel" type="Label" parent="Panel/HBoxContainer/VBoxContainer" unique_id=1318802609]
layout_mode = 2
size_flags_horizontal = 4
text = "Efectos"

[node name="SfxSlider" type="HSlider" parent="Panel/HBoxContainer/VBoxContainer" unique_id=309082614]
layout_mode = 2
size_flags_vertical = 3
min_value = -80.0
max_value = 0.0
value = -15.0

[node name="Control" type="Control" parent="Panel/HBoxContainer" unique_id=617320305]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="Panel/HBoxContainer/Control" unique_id=2068840876]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -176.0
offset_top = -98.0
offset_right = -54.0
offset_bottom = -48.0
grow_horizontal = 0
grow_vertical = 0

[node name="Label" type="Label" parent="Panel/HBoxContainer/Control/CloseButton" unique_id=1620997230]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -11.5
offset_right = 25.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Cerrar"

[connection signal="value_changed" from="Panel/HBoxContainer/VBoxContainer/MusicSlider" to="VolumeController" method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Panel/HBoxContainer/VBoxContainer/SfxSlider" to="VolumeController" method="_on_sfx_slider_value_changed"]
